--- a/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
+++ b/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AC43B8FE-E977-4AF4-B004-D20F3D4AAE4C}</ProjectGuid>
+    <ProjectGuid>{26F4FE07-0EDF-4F34-8C73-AF1DBB1EB234}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PersonalBanking.Domain.Model</RootNamespace>
-    <AssemblyName>PersonalBanking.Domain.Model</AssemblyName>
+    <RootNamespace>PersonalBanking.BLL</RootNamespace>
+    <AssemblyName>PersonalBanking.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account\BankAccount.cs" />
-    <Compile Include="Account\CreditAccount.cs" />
-    <Compile Include="Account\CurrentAccount.cs" />
-    <Compile Include="Account\DepositAccount.cs" />
-    <Compile Include="EntityBase.cs" />
-    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
