--- a/PersonalBanking/PersonalBanking.Domain.Model.Mapping/PersonalBanking.Domain.Model.Mapping.csproj
+++ b/PersonalBanking/PersonalBanking.Domain.Model.Mapping/PersonalBanking.Domain.Model.Mapping.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankAccountMap.cs" />
+    <Compile Include="BillMap.cs" />
+    <Compile Include="CardMap.cs" />
     <Compile Include="CreditAccountMap.cs" />
     <Compile Include="CurrentAccountMap.cs" />
     <Compile Include="DepositAccountMap.cs" />
