--- a/PersonalBanking/PersonalBanking.Presentation/PersonalBanking.Presentation.csproj
+++ b/PersonalBanking/PersonalBanking.Presentation/PersonalBanking.Presentation.csproj
@@ -33,6 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NHibernate, Version=4.1.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHibernate.4.1.1.4000\lib\net40\NHibernate.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +56,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PersonalBanking.Domain.Model\PersonalBanking.Domain.Model.csproj">
+      <Project>{AC43B8FE-E977-4AF4-B004-D20F3D4AAE4C}</Project>
+      <Name>PersonalBanking.Domain.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PersonalBanking.Infrastructure\PersonalBanking.Infrastructure.csproj">
+      <Project>{94EE8D29-34AD-4D08-9A6B-D597FAB3C91B}</Project>
+      <Name>PersonalBanking.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PersonalBanking.Repository.Interface\PersonalBanking.Repository.Interface.csproj">
+      <Project>{D0CBD424-FFB3-44F1-91D3-C879FD2FFCBE}</Project>
+      <Name>PersonalBanking.Repository.Interface</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
