--- a/PersonalBanking/PersonalBanking.Repository.Interface/PersonalBanking.Repository.Interface.csproj
+++ b/PersonalBanking/PersonalBanking.Repository.Interface/PersonalBanking.Repository.Interface.csproj
@@ -41,8 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IBankAccountRepository.cs" />
+    <Compile Include="IBillRepository.cs" />
     <Compile Include="IPersonRepository.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="ITransactionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
