--- a/PersonalBanking/PersonalBanking.Repository/PersonalBanking.Repository.csproj
+++ b/PersonalBanking/PersonalBanking.Repository/PersonalBanking.Repository.csproj
@@ -48,10 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SqlBillRepository.cs" />
     <Compile Include="SqlPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="SqlBankAccountRepository.cs" />
+    <Compile Include="SqlTransactionRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PersonalBanking.Domain.Model\PersonalBanking.Domain.Model.csproj">
