home ( changed CONNECTION STRING)

--- a/PersonalBanking/PersonalBanking.Presentation/App.config
+++ b/PersonalBanking/PersonalBanking.Presentation/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="PersonalBanking" connectionString="Server=.;Initial Catalog=PersonalBanking;Integrated Security=true;" providerName="System.Data.Sqlclient" />
+    <add name="PersonalBanking" connectionString="Server=DESKTOP-F879NAM\SQLEXPRESS;Initial Catalog=PersonalBanking;Integrated Security=true;" providerName="System.Data.Sqlclient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
