--- a/PersonalBanking/PersonalBanking.Repository/PersonalBanking.Repository.csproj
+++ b/PersonalBanking/PersonalBanking.Repository/PersonalBanking.Repository.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SqlBillRepository.cs" />
+    <Compile Include="SqlCardRepository.cs" />
     <Compile Include="SqlPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
