--- a/PersonalBanking/PersonalBanking.Repository.Interface/PersonalBanking.Repository.Interface.csproj
+++ b/PersonalBanking/PersonalBanking.Repository.Interface/PersonalBanking.Repository.Interface.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IPersonRepository.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="ITransactionRepository.cs" />
+    <Compile Include="IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
