--- a/PersonalBanking/PersonalBanking.Domain.Model.Mapping/PersonalBanking.Domain.Model.Mapping.csproj
+++ b/PersonalBanking/PersonalBanking.Domain.Model.Mapping/PersonalBanking.Domain.Model.Mapping.csproj
@@ -61,6 +61,7 @@
     <Compile Include="PersonMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransactionMap.cs" />
+    <Compile Include="UserMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
