--- a/PersonalBanking/PersonalBanking.PresentationMVC/PersonalBanking.PresentationMVC.csproj
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/PersonalBanking.PresentationMVC.csproj
@@ -202,6 +202,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
+    <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
