--- a/PersonalBanking/PersonalBanking.PresentationMVC/PersonalBanking.PresentationMVC.csproj
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/PersonalBanking.PresentationMVC.csproj
@@ -43,6 +43,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
@@ -179,6 +183,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Extension\ImageChanger.cs" />
@@ -202,6 +207,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -214,6 +220,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PersonalBanking.BLL\PersonalBanking.BLL.csproj">
+      <Project>{26F4FE07-0EDF-4F34-8C73-AF1DBB1EB234}</Project>
+      <Name>PersonalBanking.BLL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PersonalBanking.Domain.Model\PersonalBanking.Domain.Model.csproj">
       <Project>{ac43b8fe-e977-4af4-b004-d20f3d4aae4c}</Project>
       <Name>PersonalBanking.Domain.Model</Name>
@@ -225,6 +235,10 @@
     <ProjectReference Include="..\PersonalBanking.Repository.Interface\PersonalBanking.Repository.Interface.csproj">
       <Project>{d0cbd424-ffb3-44f1-91d3-c879fd2ffcbe}</Project>
       <Name>PersonalBanking.Repository.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PersonalBanking.Repository\PersonalBanking.Repository.csproj">
+      <Project>{E8A647BD-B8A3-4E7E-B6B8-DDA9F763B57B}</Project>
+      <Name>PersonalBanking.Repository</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
