--- a/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
+++ b/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Abstract\IGenericService.cs" />
     <Compile Include="Abstract\IRegisterService.cs" />
+    <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="DTO\BankAccountDTO.cs" />
     <Compile Include="DTO\BillDTO.cs" />
     <Compile Include="DTO\CardDTO.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GenericService.cs" />
     <Compile Include="Services\RegisterService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PersonalBanking.Domain.Model\PersonalBanking.Domain.Model.csproj">
