--- a/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
+++ b/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
@@ -52,21 +52,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IBankAccountService.cs" />
     <Compile Include="Abstract\IGenericService.cs" />
     <Compile Include="Abstract\IRegisterService.cs" />
     <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="DTO\BankAccountDTO.cs" />
     <Compile Include="DTO\BillDTO.cs" />
     <Compile Include="DTO\CardDTO.cs" />
-    <Compile Include="DTO\CreditAccountDTO.cs" />
-    <Compile Include="DTO\CurrentAccountDTO.cs" />
-    <Compile Include="DTO\DepositAccountDTO.cs" />
     <Compile Include="DTO\EntityBaseDTO.cs" />
     <Compile Include="DTO\PersonDTO.cs" />
     <Compile Include="DTO\TransactionDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="Mapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BankAccountService.cs" />
     <Compile Include="Services\GenericService.cs" />
     <Compile Include="Services\RegisterService.cs" />
     <Compile Include="Services\UserService.cs" />
