--- a/PersonalBanking/PersonalBanking.PresentationMVC/PersonalBanking.PresentationMVC.csproj
+++ b/PersonalBanking/PersonalBanking.PresentationMVC/PersonalBanking.PresentationMVC.csproj
@@ -189,7 +189,7 @@
     <Compile Include="Controllers\AdminUserController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="Extension\ImageChanger.cs" />
+    <Compile Include="Extension\CustomGreetings.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
