--- a/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
+++ b/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Abstract\IBankAccountService.cs" />
     <Compile Include="Abstract\IGenericService.cs" />
+    <Compile Include="Abstract\IPersonService.cs" />
     <Compile Include="Abstract\IRegisterService.cs" />
     <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="DTO\BankAccountDTO.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BankAccountService.cs" />
     <Compile Include="Services\GenericService.cs" />
+    <Compile Include="Services\PersonService.cs" />
     <Compile Include="Services\RegisterService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
