--- a/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
+++ b/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IBankAccountService.cs" />
+    <Compile Include="Abstract\IClientBankingService.cs" />
     <Compile Include="Abstract\IGenericService.cs" />
     <Compile Include="Abstract\IPersonService.cs" />
     <Compile Include="Abstract\IRegisterService.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Mapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BankAccountService.cs" />
+    <Compile Include="Services\ClientBankingService.cs" />
     <Compile Include="Services\GenericService.cs" />
     <Compile Include="Services\PersonService.cs" />
     <Compile Include="Services\RegisterService.cs" />
