--- a/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
+++ b/PersonalBanking/PersonalBanking.BLL/PersonalBanking.BLL.csproj
@@ -54,9 +54,12 @@
   <ItemGroup>
     <Compile Include="Abstract\IBankAccountService.cs" />
     <Compile Include="Abstract\IClientBankingService.cs" />
+    <Compile Include="Abstract\ICursManagerService.cs" />
+    <Compile Include="Abstract\IExchangeService.cs" />
     <Compile Include="Abstract\IGenericService.cs" />
     <Compile Include="Abstract\IPersonService.cs" />
     <Compile Include="Abstract\IRegisterService.cs" />
+    <Compile Include="Abstract\ITransferManagerService.cs" />
     <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="DTO\BankAccountDTO.cs" />
     <Compile Include="DTO\BillDTO.cs" />
@@ -67,14 +70,18 @@
     <Compile Include="DTO\EntityBaseDTO.cs" />
     <Compile Include="DTO\PersonDTO.cs" />
     <Compile Include="DTO\TransactionDTO.cs" />
+    <Compile Include="DTO\TransferingDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="Mapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BankAccountService.cs" />
     <Compile Include="Services\ClientBankingService.cs" />
+    <Compile Include="Services\CursManagerService.cs" />
+    <Compile Include="Services\ExchangeService.cs" />
     <Compile Include="Services\GenericService.cs" />
     <Compile Include="Services\PersonService.cs" />
     <Compile Include="Services\RegisterService.cs" />
+    <Compile Include="Services\TransferManagerService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
